---
source: spade-tests/src/ast_lowering.rs
---
pub mod submod {
    struct A {}
}
mod submod2 {
    use lib::submod::A;
}


error: A is inaccessible
  ┌─ testinput:5:22
  │
2 │     struct A {}
  │     ----------- The inaccessible item is defined here
  ·
5 │     use lib::submod::A;
  │                      ^ A is inaccessible
  │
  = Consider adding `pub`
  │
2 │     pub struct A {}
  │     ++++
  = Or a more limited visiblity like pub(lib) or pub(super)
  │
2 │     pub(lib) struct A {}
  │     +++++++++
